--- a/ui/styles/dialogs_styles/script_editor.css
+++ b/ui/styles/dialogs_styles/script_editor.css
@@ -27,8 +27,8 @@ CodeEditor#script_code_editor {
 }
 
 DataPlotStudioLineEdit#script_variable_search {
-    background-color: #1e1e1e;
-    color: #000000;
+    background-color: #2b2b2b;
+    color: white;
     border: 1px solid #555;
     border-radius: 4px;
     padding: 4px;
